welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: Missing closing brace `}' assumed here
def positionFinale(x:Int, y:Int):Boolean = {
^